--- a/assignment_1/assignment_1.ipynb
+++ b/assignment_1/assignment_1.ipynb
@@ -19,24 +19,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "## Boilerplate start - you can mostly ignore this!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
+    "## Boilerplate start - you can mostly ignore this!\n",
+    "\n",
     "import os\n",
     "import torch\n",
+    "import math\n",
     "import PIL\n",
     "from torch import nn\n",
     "from torch.utils.data.dataloader import default_collate\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,24 +251,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://s3.amazonaws.com/fast-ai-imageclas/imagenette2.tgz to ./data/imagenette2.tgz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████| 1.56G/1.56G [10:31<00:00, 2.47MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/imagenette2.tgz to ./data\n",
+      "There are 9469 examples in the training set\n",
+      "There are 3532 examples in the test set \n",
+      "\n",
+      "Image shape is: torch.Size([3, 224, 224]), label example is 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Get data\n",
     "dataset_name = 'imagenette'\n",
     "train_set, validation_set, test_set = get_dataset(dataset_name, validation_size=0.1)\n",
-    "\n",
     "# Make dataloaders\n",
     "batch_size=16\n",
     "train_dataloader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "validation_dataloader = torch.utils.data.DataLoader(validation_set, batch_size=batch_size, shuffle=False, collate_fn=collate_fn)\n",
-    "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=False, collate_fn=collate_fn)"
+    "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=False, collate_fn=collate_fn)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,22 +301,22 @@
     "        super().__init__()\n",
     "        \n",
     "        # Helper hyperparameters to keep track of VGG16 architecture\n",
-    "        conv_stride = ...\n",
-    "        pool_stride = ...\n",
-    "        conv_kernel = ...\n",
-    "        pool_kernel = ...\n",
-    "        dropout_probs = ...\n",
-    "        optim_momentum = ...\n",
-    "        weight_decay = ...\n",
-    "        learning_rate = ...\n",
+    "        conv_stride = 1\n",
+    "        pool_stride = 2\n",
+    "        conv_kernel = 3\n",
+    "        pool_kernel = 2\n",
+    "        dropout_probs = 0.5\n",
+    "        optim_momentum = 0.9\n",
+    "        weight_decay_l2 = 5e-4\n",
+    "        learning_rate = 1e-2\n",
     "\n",
-    "        # Define features and classifier each individually, this is how the VGG16-D model is orignally defined\n",
+    "        # Define features and classifier each individually, this is how the VGG16-D model is originally defined\n",
     "        self.features = torch.nn.Sequential(\n",
-    "            nn.Conv2d(in_channels=in_channels, out_channels=32, kernel_size=3, padding=1), # dim = in\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(in_channels=3, out_channels=32, kernel_size=conv_kernel, stride=conv_stride, padding=1), # dim = in\n",
+    "            nn.MaxPool2d(kernel_size=pool_kernel, stride=pool_stride),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3),\n",
-    "            nn.MaxPool2d(kernel_size=2),\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=conv_kernel, stride=conv_stride),\n",
+    "            nn.MaxPool2d(kernel_size=pool_kernel, stride=pool_stride),\n",
     "            nn.ReLU(),\n",
     "            nn.Flatten(),\n",
     "        ).to(device)\n",
@@ -309,16 +333,17 @@
     "        self.criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "        # Optimizer - For now just set to Adam to test the implementation\n",
-    "        self.optim = torch.optim.Adam(list(self.features.parameters()) + list(self.classifier.parameters()), lr=0.001)\n",
-    "        # self.optim = torch.optim.SGD(list(self.features.parameters()) + list(self.classifier.parameters()), lr=learning_rate, momentum=optim_momentum, weight_decay=weight_decay)\n",
+    "        # self.optim = torch.optim.Adam(list(self.features.parameters()) + list(self.classifier.parameters()), lr=0.001)\n",
+    "        self.optim = torch.optim.SGD(list(self.features.parameters()) + list(self.classifier.parameters()), lr=learning_rate, momentum=optim_momentum, weight_decay=weight_decay_l2)\n",
     "\n",
     "        self.dataset = dataset\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.features(self.classifier(x))\n",
+    "        x = self.features(x)\n",
+    "        # print(x.shape)\n",
+    "        return self.classifier(x)\n",
     "\n",
     "    def train_model(self, train_dataloader, epochs=1, val_dataloader=None):\n",
-    "        \n",
     "        # Call .train() on self to turn on dropout\n",
     "        self.train()\n",
     "\n",
@@ -327,9 +352,7 @@
     "        test_accs = []\n",
     "\n",
     "        for epoch in range(epochs):\n",
-    "            \n",
     "            epoch_acc = 0\n",
-    "\n",
     "            for inputs, targets in tqdm(train_dataloader):\n",
     "                logits = self(inputs)\n",
     "                loss = self.criterion(logits, targets)\n",
@@ -424,7 +447,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████| 592/592 [08:09<00:00,  1.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 validation accuracy: 0.2729331823329558\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████| 592/592 [08:09<00:00,  1.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 validation accuracy: 0.3380520951302378\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████| 592/592 [14:42<00:00,  1.49s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 validation accuracy: 0.43799546998867495\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 52%|█████████████▉             | 306/592 [04:05<03:52,  1.23it/s]"
+     ]
+    }
+   ],
    "source": [
     "in_channels = next(iter(train_dataloader))[0].shape[1]\n",
     "in_width_height = next(iter(train_dataloader))[0].shape[-1]\n",
@@ -432,10 +505,10 @@
     "CNN_model = VGG16(num_classes=10, in_channels=in_channels)\n",
     "\n",
     "# WARNING - THIS PART MIGHT BREAK\n",
-    "features_fore_linear = utils.get_dim_before_first_linear(CNN_model.features, in_width_height, in_channels, brain=True)\n",
+    "# features_fore_linear = utils.get_dim_before_first_linear(CNN_model.features, in_width_height, in_channels, brain=True)\n",
     "\n",
     "# Now make true model when we know how many features we have before the first linear layer\n",
-    "CNN_model = VGG16(num_classes=10, in_channels=in_channels, features_fore_linear=10752, dataset=test_set) \n",
+    "CNN_model = VGG16(num_classes=10, in_channels=in_channels, features_fore_linear=193600, dataset=test_set) \n",
     "\n",
     "train_epochs = 5\n",
     "train_accs, test_accs = CNN_model.train_model(train_dataloader, epochs=train_epochs,  val_dataloader=test_dataloader)\n",
@@ -462,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sign-dat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,9 +549,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
