--- a/assignment_1/assignment_1.ipynb
+++ b/assignment_1/assignment_1.ipynb
@@ -494,7 +494,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 52%|█████████████▉             | 306/592 [04:05<03:52,  1.23it/s]"
+      "100%|███████████████████████████| 592/592 [07:56<00:00,  1.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 validation accuracy: 0.5002831257078143\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|████▉                      | 107/592 [01:26<06:32,  1.24it/s]"
      ]
     }
    ],
